<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvSwitchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_automatic_data"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/masterSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPreferredConType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/ui_preferred_con_type"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/conRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/radioWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ui_wifi"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio2G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_2g"
            android:textSize="16sp" />

    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/ltgray"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvActiveApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_active_apps"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnPickApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_pick_apps"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:textColor="@color/txtBtnColor"
            android:padding="8dp"
            />

        <ListView
            android:id="@+id/lvActiveApps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@null"
            android:layout_below="@+id/tvActiveApps" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvActiveApps"
            android:text="@string/ui_empty"
            android:textSize="16sp"
            android:gravity="center"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnActivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textColor="@color/txtColorBlack"
        android:text="@string/ui_add_apps" />
</LinearLayout>
